focus styles fixes

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -67,8 +67,7 @@
         text-decoration: none;
 
         &:hover,
-        &:focus-visible {
-            outline: none;
+        &:focus {
             text-decoration: underline;
         }
 
