--- a/src/scss/components/_stepper.scss
+++ b/src/scss/components/_stepper.scss
@@ -28,8 +28,7 @@
         }
 
         &:hover,
-        &:focus-visible {
-            outline: none;
+        &:focus {
             background-color: var(--accent-color);
             border-color: var(--accent-color);
 
