--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -20,7 +20,7 @@
 		}
 	}
 
-	&:focus-visible {
+	&:focus {
 		outline: 2px solid var(--accent-color);
 		border-color: var(--bright-color);
 
@@ -66,7 +66,7 @@
 			}
 		}
 
-		&:focus-visible {
+		&:focus {
 			outline: 2px solid var(--primary-color);
 			border-color: var(--accent-color);
 
@@ -97,8 +97,7 @@
 			}
 		}
 
-		&:focus-visible {
-			outline: none;
+		&:focus {
 			border-color: var(--secondary-color);
 			color: var(--secondary-color);
 
