--- a/src/scss/components/_checkbox.scss
+++ b/src/scss/components/_checkbox.scss
@@ -31,7 +31,7 @@
 		position: absolute;
 		appearance: none;
 
-		&:focus-visible + .checkbox__label {
+		&:focus + .checkbox__label {
 			&::before {
 				outline: 2px solid var(--primary-color);
 
