--- a/src/scss/components/_text-field.scss
+++ b/src/scss/components/_text-field.scss
@@ -37,7 +37,7 @@
 			color: var(--muted-color);
 		}
 
-		&:focus-visible {
+		&:focus {
 			outline: 2px solid var(--accent-color);
 
 			@media screen and (max-width: $md) {
